fix css scrollbar

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -4,9 +4,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 15px;
     gap: 5px;
     background: #161616;
+    overflow: hidden;
 }
 
 .rodape-texto {
