--- a/styles/header.css
+++ b/styles/header.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100vh;
 }
 .container {
     display: flex;
@@ -143,6 +144,7 @@
 
 @media screen and (min-width: 1024px) {
     .cabecalho {
+        width: 100vh;
         max-width: 1440px;
         margin: auto;
     }
