--- a/styles/style.css
+++ b/styles/style.css
@@ -26,8 +26,24 @@ html {
 }
 
 body {
+    margin: auto;
+    box-sizing: border-box;
     width: 100vw;
     height: 100vh;
     background: var(--bg-body);
     font-family: var(--font-principal);
+    overflow-x: hidden;
+}
+
+body::-webkit-scrollbar{
+    width: 3px;
+}
+
+body::-webkit-scrollbar-thumb{
+    background: var(--cor-cinza-escuro);
+    border-radius: 20px;
+}
+
+body::-webkit-scrollbar-track {
+    background: var(--bg-body);
 }
